--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quiz App</title>
-    <link rel="stylesheet" href="style.css">
+  <title>JavaScript Quiz App</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="app">
-    <h1>Quiz</h1>
-    <div class="quiz">
-        <h2 id="question">Question</h2>
-        <div id="answer-button">
-            <button class="btn">Answer 1</button>
-            <button class="btn">Answer 2</button>
-            <button class="btn">Answer 3</button>
-            <button class="btn">Answer 4</button>
-
-        </div>
-    </div>
-
-</div>
+  <div class="container">
+    <h1>Quiz App</h1>
+    <div id="quiz"></div>
+    <div id="result" class="result"></div>
+    <button id="submit" class="button">Submit</button>
+    <button id="retry" class="button hide">Retry</button>
+    
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
